2025-01-05  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: Fix https://github.com/arakiken/mlterm/issues/127

	* ui_emoji.c: Fix segfault in win32.

	* ci.yml: Remove  -Wno-error=incompatible-pointer-types-discards-qualifiers
	  from CFLAGS in freebsd.

	* bl_path.h: Fix bl_basename_simple().
	  (enbugged at a3dc30011fdab2d102b1b4ba17dbd88f90c504a1)

2025-01-04  Araki Ken  <arakiken@users.sf.net>

	* vt_term_manager.c: Excecute "terms[idx * MTU + count] = terms[--num_terms]"
	  not only if zombie_pty is 0 but also if zombie_pty is 1.
	  (enbugged at 5696c69e9ffaec38884b2d16574d97df873af47d)

	* ui_im_status_screen.c: Add const.

	* c_sixel.c: Add cast from pixel_t* to u_char** in TEST_sixel_realloc_pixels().

2025-01-03  Araki Ken  <arakiken@users.sf.net>

	* ui_window.[ch]:
	  - Fix illegal memory access by ui_window_set_icon().
	    (u_int32_t -> u_long)
	    (enbugged at 3d38b723e0e4a6dd434af2d49aca53890982a828)

	  - Execute initialization code for a root window in ui_window_show()
	    even if --parent option is specified.
	    (Related to https://github.com/arakiken/mlterm/issues/118)

	  - Add HINT_CHILD_WINDOW_ATTR for libvte compatible libraray.

2025-01-02  Araki Ken  <arakiken@users.sf.net>

	* ci.yml: Add build-freebsd.

	* fb/ui_display_freebsd.c: Fix conflict of vt_font in FreeBSD 13 or later.

	* cocoa.m, ui_screen.c, ui_window.h: Add const.

	* quartz/ui_scrollbar.c, ui_layout.c: Add const.

	* ui_color.h, */ui_color.c, cocoa.m, ui_bel_mode.[ch],
	  ui_color_cache.[ch], ui_color_manager.[ch], ui_layout.c,
	  ui_mod_meta_mode.[ch], ui_sb_mode.[ch], ui_screen.[ch],
	  ui_scrollbar.[ch], ui_type_engine.[ch], ui_im_status_screen.c,
	  ui_window.h, vt_char_encoding.[ch], vt_ot_layout.[ch],
	  vt_parser.[ch], vt_pty.[ch], vt_term.[ch]: Add const.

	* quartz/ui_im_status_screen-cocoa.m, im_wnn.c: Add const.

	* im_ibus.c, im_common.h, skk/ef_str_parser.c, gtkxlfdsel.[ch],
	  mc_combo.[ch], mc_im.c, mc_opentype.c, fb/ui_font.c, ui_brltty.c,