@@ -12,6 +12,7 @@
 * Support P2=1 in sixel graphics. (https://github.com/arakiken/mlterm/issues/81)
 * Support libpng to build mlimgloader if gdk-pixbuf is not found.
   (https://github.com/arakiken/mlterm/issues/96)
+* Support Emoji variation selectors 15 and 16. (https://github.com/arakiken/mlterm/issues/84)
 * Add --conpty/use_conpty and --winsize/output_xtwinops_in_resizing options in win32.
 * Add --norepkey/mod_keys_to_stop_mouse_report option.
 * Add tool/accessories/applycfg.sh and applyfontcfg.sh
@@ -37,6 +38,10 @@
   https://github.com/arakiken/mlterm/issues/97
   https://github.com/arakiken/mlterm/issues/103
   https://github.com/arakiken/mlterm/issues/107
+  https://github.com/arakiken/mlterm/issues/111
+  https://github.com/arakiken/mlterm/issues/113
+  https://github.com/arakiken/mlterm/issues/125
+  https://github.com/arakiken/mlterm/issues/126
   Fix an issue where mlconfig was not displayed.
   Fix an issue where Control+Shift+xxx shortcut didn't work in SDL2.
   Fix unexpected reset of inverted colors in selected area in SDL2.
